--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+click<=8.0.4
+streamlit
 streamlit
 pandas
 plotly
@@ -5,4 +7,6 @@ requests
 bs4
 yfinance
 datetime
+matplotlib
 pymongo==4.1.1
+numpy
